# moonslate

./: .gitignore  .gitmodules  README.md  build.sh  setup.sh
.github/workflows/: release.yml
app/: AudioPlayer.cpp  AudioPlayer.h  CMakeLists.txt  LangConfig.h  LivePipelineWorker.cpp  LivePipelineWorker.h  MainWindow.cpp  MainWindow.h  ModelDownloader.cpp  ModelDownloader.h  integration.cpp  integration_qt.cpp  main.cpp
ctranslate2/: CMakeLists.txt  ModelDownloader.cpp  ModelDownloader.h  integration.cpp  integration_qt.cpp  main.cpp
patches/: 0001-Expose-raw-acoustic-fingerprint-extraction-fix-zero-.patch  0002-fix-Audio-reversing-cycle-and-static-Annote-instanti.patch
